# kelvinclaw

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  OVERVIEW.md  README.md  SECURITY.md  audit.toml  docker-compose.yml  index.json  install.sh  trusted_publishers.example.json
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml  manual-verify.yml  memory-kms-smoke.yml  plugin-abi-compat.yml  release-executables.yml  release-linux-executables.yml
.playwright-cli/: page-2026-03-14T13-05-42-842Z.yml
apps/kelvin-cli/: Cargo.toml
apps/kelvin-cli/src/: bare.rs  cli.rs  env.rs  keys.rs  main.rs  paths.rs  prefs.rs  tty.rs
apps/kelvin-cli/src/cmd/: completions.rs  doctor.rs  gateway.rs  init.rs  medkit.rs  memory.rs  mod.rs  plugin.rs  service.rs  start.rs  stop.rs  tui.rs
apps/kelvin-cli/src/cmd/plugin_ops/: download.rs  install.rs  mod.rs
apps/kelvin-cli/src/proc/: mod.rs  unix.rs  windows.rs
apps/kelvin-cli/tests/: startup_e2e.rs
apps/kelvin-gateway/: Cargo.toml
apps/kelvin-host/: Cargo.toml
apps/kelvin-tui/: Cargo.toml
apps/kelvin-tui/src/: app.rs  consts.rs  main.rs  ws_client.rs
apps/kelvin-tui/src/commands/: mod.rs
apps/kelvin-tui/src/ui/: autocomplete.rs  chat.rs  input.rs  mod.rs  status.rs  tools.rs
archive/kelvin-cli/: Cargo.toml
archive/kelvin-cli/src/: main.rs
crates/kelvin-brain/: Cargo.toml
crates/kelvin-memory-api/: Cargo.toml  build.rs
crates/kelvin-memory-client/: Cargo.toml
crates/kelvin-memory-controller/: Cargo.toml
crates/kelvin-memory-module-sdk/: Cargo.toml
crates/kelvin-sdk/: Cargo.toml
crates/kelvin-wasm/: Cargo.toml
docker/: Dockerfile.gateway  Dockerfile.registry  Dockerfile.runtime  Dockerfile.test  Dockerfile.tui
docs/: GETTING_STARTED.md  KELVIN_CORE_SDK.md  PLUGIN_INSTALL_FLOW.md  README.md  RUST_DEVELOPER_QUICKSTART.md  SDK_TEST_MATRIX.md  architecture.md  docker.md  gateway-protocol.md  kelvin-gap-analysis.md  memory-control-data-plane.md  memory-controller-deployment-profiles.md  memory-rpc-contract.md  openai-plugin-install-and-run.md  plugin-author-kit.md  plugin-index-schema.md  plugin-quality-tiers.md  plugin-trust-operations.md  runtime-container-first-run.md  toolpack-sdk-plugins.md  trusted-executive-wasm.md
docs/architecture/: KELVIN_CORE_SDK.md  agents-tradeoffs.md  architecture.md  c4-level1-context.md  c4-level2-container.md  c4-level3-component.md  c4-level4-code.md  core-admission-policy.md  kelvin-core-sdk.md  kelvin-gap-analysis.md  root-vs-sdk.md
docs/architecture-reference/: roadmap.md
docs/gateway/: gateway-protocol.md  terminal-ui.md  whatsapp-setup.md
docs/getting-started/: GETTING_STARTED.md  runtime-container-first-run.md  rust-developer-quickstart.md
docs/kelvin-spec/: 00-overview.md  01-claw-anatomy.md  02-concepts-disambiguated.md  03-delegation-and-call-tree.md  04-modes.md  05-autonomy-postures.md  06-approvals-primitive.md  07-sidecars.md  08-mind.md  09-data-model.md  10-h02-migration.md  11-roadmap.md
docs/memory/: memory-controller-deployment-profiles.md  memory-module-sdk.md
docs/plugins/: anthropic-plugin-install-and-run.md  build-a-model-plugin.md  build-a-tool-plugin.md  openai-plugin-install-and-run.md  openrouter-plugin-install-and-run.md  plugin-author-kit.md  plugin-index-schema.md  plugin-install-flow.md  plugin-quality-tiers.md  plugin-trust-operations.md  tool-plugin-abi.md
docs/runbooks/: kelvin-gateway-service-management.md  memory-jwt-key-rotation.md  memory-module-denial-timeout-storms.md  module-publisher-trust-policy.md
docs/security/: SDK_NIST_AI_RMF_1_0.md  SDK_OWASP_TOP10_AI_2025.md  sdk-nist-ai-rmf-1-0.md  sdk-owasp-top10-ai-2025.md  sdk-test-matrix.md
examples/kelvin-anthropic-plugin/: plugin.json
examples/kelvin-openrouter-plugin/: plugin.json
plugins/: trusted_publishers.kelvin.json
plugins/kelvin-anthropic-plugin/: Cargo.toml  README.md  plugin.json
plugins/kelvin-cli/: plugin.json
plugins/kelvin-echo-plugin/: Cargo.toml  README.md  build.sh  plugin.json
plugins/kelvin-exa-plugin/: Cargo.toml  Makefile  README.md  build.sh  plugin.json
plugins/kelvin-ollama-plugin/: .gitignore  Cargo.toml  Makefile  README.md  build.sh  plugin.json
plugins/kelvin-ollama-plugin/src/: lib.rs
plugins/kelvin-openai-plugin/: Cargo.toml  README.md  build.sh  plugin.json
plugins/kelvin-openrouter-plugin/: .gitignore  Cargo.toml  README.md  plugin.json
plugins/kelvin-websearch-plugin/: Cargo.toml  Makefile  README.md  build.sh  plugin.json
plugins/kelvin-websearch-plugin/payload/: README.md
plugins/kelvin-websearch-plugin/src/: lib.rs
plugins/kelvin-wiki-plugin/: Cargo.toml  build.sh  plugin.json
plugins/kelvin-wiki-plugin/src/: lib.rs
release/: README.md  env.example  official-first-party-plugins.env
scripts/: gateway-plugin-init.sh  install-kelvin-anthropic-plugin.sh  install-kelvin-browser-plugin.sh  install-kelvin-cli-plugin.sh  install-kelvin-openai-plugin.sh  install-kelvin-openrouter-plugin.sh  kelvin  kelvin-dev-stack.sh  kelvin-gateway.cmd  kelvin-gateway.ps1  kelvin-gateway.sh  kelvin-local-profile.sh  kelvin-medkit.sh  kelvin-plugin-dev.sh  kelvin-plugin.sh  kelvin-release-launcher.ps1  kelvin-release-launcher.sh  kelvin-setup.sh  kelvin-tui.cmd  kelvin-tui.ps1  kelvin-tui.sh  kms-ed25519-public-key.sh  kpm.cmd  kpm.ps1  kpm.sh  local-homebrew-install.sh  memory-rollout-check.sh  package-unix-release.sh  package-windows-release.ps1  plugin-author-docker.sh  plugin-discovery.sh  plugin-index-install.sh  plugin-install.sh  plugin-list.sh  plugin-sign.sh  plugin-trust.sh  plugin-uninstall.sh  plugin-update-check.sh  quickstart.sh  remote-test.sh  (+18 more)
scripts/lib/: docker-cache.sh  rust-toolchain-path.sh
wiki/: Architecture.md  Development-and-Contributing.md  Gateway-and-Operator-Guide.md  Getting-Started.md  Home.md  Memory-System.md  Operations-and-Runbooks.md  Plugin-Registry-and-Trust.md  Plugin-System.md  Reference-Map.md  Security-Model.md  Testing-and-Validation.md  _Sidebar.md
(+151 files in other folders)
