[workspace]
members = [
  "apps/kelvin-cli",
  "apps/kelvin-tui",
  "apps/kelvin-gateway",
  "apps/kelvin-host",
  "apps/kelvin-registry",
  "crates/kelvin-core",
  "crates/kelvin-sdk",
  "crates/kelvin-memory",
  "crates/kelvin-brain",
  "crates/kelvin-wasm",
  "crates/kelvin-memory-api",
  "crates/kelvin-memory-client",
  "crates/kelvin-memory-controller",
  "crates/kelvin-memory-module-sdk",
]
resolver = "2"

[workspace.package]
version = "0.2.5"
edition = "2021"
license = "MIT"
authors = ["KelvinClaw Contributors"]

[workspace.dependencies]
async-trait = "0.1"
aws-config = "1"
aws-sdk-kms = "1"
aws-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
walkdir = "2"
semver = "1"
wasmtime = "42.0.2"
base64 = "0.22"
sha2 = "0.10"
ed25519-dalek = "2"
tonic = { version = "0.14", features = ["transport", "tls-ring"] }
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
protoc-bin-vendored = "3"
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
uuid = { version = "1", features = ["v4", "serde"] }
wasmparser = "0.226"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
url = "2"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tokio-rustls = "0.26"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
dotenvy = "0.15"
dialoguer = "0.11"
rpassword = "7"
tar = "0.4"
flate2 = "1"
sysinfo = "0.32"
pkcs8 = { version = "0.10", features = ["pem"] }
rand = "0.8"
anyhow = "1"
dirs = "5"
nix = { version = "0.29", features = ["signal", "process"] }
