[package]
name = "kelvin-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["KelvinClaw Contributors"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
kelvin-core = { path = "../../crates/kelvin-core" }
kelvin-memory = { path = "../../crates/kelvin-memory" }
kelvin-brain = { path = "../../crates/kelvin-brain" }
kelvin-runtime = { path = "../../crates/kelvin-runtime" }

[workspace]
